2009-05-15  Ulrich Drepper  <drepper@redhat.com>

	* cancellation.c (__pthread_disable_asynccancel): Correct the bits
	to test when deciding on the delay.
	* libc-cancellation.c (__libc_disable_asynccancel): Likewise.
	* pthread_cancel.c: Close race between deciding on sending a signal
	and setting the CANCELING_BIT bit.

	* cancellation.c (__pthread_disable_asynccancel): Don't return if
	thread is canceled.
	* libc-cancellation.c (__libc_disable_asynccancel): Likewise.

2009-04-27  Ulrich Drepper  <drepper@redhat.com>

	* cancellation.c (__pthread_disable_asynccancel): Use THREAD_ATOMIC_AND
	is available.
	* libc-cancellation.c (__libc_disable_asynccancel): Likewise.
	* sysdeps/x86_64/tls.h: Define THREAD_ATOMIC_AND.
	* sysdeps/i386/tls.h: Likewise.
	(tcbhead_t): Add __private_tm member.

2009-04-26  Ulrich Drepper  <drepper@redhat.com>

	* sem_open.c (sem_open): Rewrite initialization of initsem to
	avoid warnings.

	* sysdeps/unix/sysv/linux/libc_pthread_init.c (__libc_pthread_init):
	Avoid warning by using may_alias attribute on ptrhack.

2009-04-22  Ulrich Drepper  <drepper@redhat.com>

	[BZ #10090]
	* pthread_attr_setschedparam.c (__pthread_attr_setschedparam):
	Check policy and priority for validity.
	Patch mostly by Zhang Xiliang <zhangxiliang@cn.fujitsu.com>.

2009-03-15  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S
	(__pthread_cond_timedwait): Change to use cfi directives instead of
	hand-coded unwind sections.

2009-03-10  Ulrich Drepper  <drepper@redhat.com>

	* init.c (nptl_freeres): Compile only for SHARED.

2009-03-09  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/lowlevellock.h: Define
	FUTEX_WAIT_BITSET, FUTEX_WAKE_BITSET, FUTEX_CLOCK_REALTIME and
	FUTEX_BITSET_MATCH_ANY.

2009-02-27  Roland McGrath  <roland@redhat.com>

	* init.c (__nptl_initial_report_events): Mark __attribute_used__.
	* pthread_create.c (__nptl_threads_events, __nptl_last_event): Likewise.
