@@ -1,3 +1,9 @@
+2009-05-16  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #9924]
+	* nptl-init.c: Renamed from init.c.
+	* Makefile: Change all occurences of init.c to nptl-init.c.
+
 2009-05-15  Ulrich Drepper  <drepper@redhat.com>
 
 	* cancellation.c (__pthread_disable_asynccancel): Correct the bits
